# mcp-creator

./: .gitignore  LAUNCHGUIDE.md  README.md  pyproject.toml
src/mcp_creator/: __init__.py  server.py  transport.py
src/mcp_creator/services/: codegen.py  file_writer.py  pypi_client.py  subprocess_runner.py
src/mcp_creator/tools/: add_tool.py  build_package.py  check_pypi_name.py  check_setup.py  creator_profile.py  generate_launchguide.py  publish_package.py  scaffold_server.py  setup_github.py
tests/: test_add_tool.py  test_check_pypi_name.py  test_codegen.py  test_scaffold.py  test_server.py
