[project]
name = "mcp-creator"
version = "0.2.2"
description = "Create, build, and publish Python MCP servers to PyPI — conversationally"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-creator = "mcp_creator.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_creator"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
